exports[`Dashboard should render with the children 1`] = `
<div>
<div className="push-top soft-left@handheld soft-top@handheld soft-double-left soft-double-top background--light-primary">
<h1 className="soft-half-bottom@handheld soft-bottom">
Your Giving
</h1>
<div className="floating text-left">
<Link to="https://my.newspring.cc/give" className="floating__item soft-half-sides push-right text-center plain outlined--bottom" style={{...}} onlyActiveOnIndex={false}>
<h6>
Home
</h6>
</Link>
<Link to="https://my.newspring.cc/give/now" className="floating__item soft-half-sides push-right text-center plain text-dark-primary" style={{...}} onlyActiveOnIndex={false}>
<h6>
Give Now
</h6>
</Link>
<Link to="https://my.newspring.cc/give/history" className="floating__item soft-half-sides push-right text-center plain text-dark-primary" style={{...}} onlyActiveOnIndex={false}>
<h6>
History
</h6>
</Link>
</div>
</div>
<div className="background--light-secondary outlined--top outlined--light" style={{...}}>
<div>
<Activity status="success" date="2016-12-25" message="Yay! This is so great for you!" linkText="You KNOW You Want To Click This" linkUrl="https://my.newspring.cc" />
</div>
</div>
</div>
`;

exports[`Dashboard should render with the default set of props 1`] = `
<div>
<div className="push-top soft-left@handheld soft-top@handheld soft-double-left soft-double-top background--light-primary">
<h1 className="soft-half-bottom@handheld soft-bottom">
Your Giving
</h1>
<div className="floating text-left">
<Link to="https://my.newspring.cc/give" className="floating__item soft-half-sides push-right text-center plain outlined--bottom" style={{...}} onlyActiveOnIndex={false}>
<h6>
Home
</h6>
</Link>
<Link to="https://my.newspring.cc/give/now" className="floating__item soft-half-sides push-right text-center plain text-dark-primary" style={{...}} onlyActiveOnIndex={false}>
<h6>
Give Now
</h6>
</Link>
<Link to="https://my.newspring.cc/give/history" className="floating__item soft-half-sides push-right text-center plain text-dark-primary" style={{...}} onlyActiveOnIndex={false}>
<h6>
History
</h6>
</Link>
</div>
</div>
<div className="background--light-secondary outlined--top outlined--light" style={{...}}>
<div />
</div>
</div>
`;
